Aula 22/11/2024 conteúdo da aula

--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ ol {
 }
 
 /*FROMATAÇÃO DA TABELA NA PAGINA BAIRROS*/
-.tabela1 {
+.tabela {
   border-collapse: separate;    /*Modo de espaçamento entre as celulas*/
   width: 100%;
   
